--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <strong>new product</strong> or <strong>repair</strong> and
         <strong>extend</strong> your existing application's features. We've
         worked with companies small and large such as <strong>Sony</strong>,
-        <strong>Verizon</strong>, <strong>Broadly</strong> and
-        <strong>Catawiki</strong> to deliver APIs, frontends, design, and
-        product advice.
+        <strong>Verizon</strong>, <strong>E-xact</strong> and
+        <strong>Metrica</strong> to deliver APIs, frontends, design, and product
+        advice.
       </div>
       <div class="contact-title">Contact</div>
       <div class="contact-text">
