feat: List projects

--- a/index.html
+++ b/index.html
@@ -18,94 +18,200 @@
       <div class="title-logo">Bansco</div>
     </header>
     <div class="web-content">
-      <div class="title">We build your web and mobile application</div>
-      <div class="subtitle">
-        as a distributed team, merging Silicon Valley experience with European
-        work ethic.
-      </div>
-      <div class="button-container">
-        <a
-          class="button primary"
-          href="https://github.com/bansco"
-          target="_blank"
-          >See more</a
-        >
-      </div>
-      <div class="icon-container-comp">
-        <div class="icon-comp">
-          <i class="devicon-amazonwebservices-original"></i>
-          <span>AWS</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-docker-plain"></i>
-          <span>Docker</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-express-original"></i>
-          <span>Express</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-nodejs-plain"></i>
-          <span>Node</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-redis-plain"></i>
-          <span>Redis</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-rust-plain"></i>
-          <span>Rust</span>
-        </div>
+      <div class="title">digital products</div>
 
-        <div class="icon-comp">
-          <i class="devicon-illustrator-plain"></i>
-          <span>Illustrator</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-photoshop-plain"></i>
-          <span>Photoshop</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-ionic-original"></i>
-          <span>Ionic</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-webpack-plain"></i>
-          <span>Webpack</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-react-plain"></i>
-          <span>React</span>
-        </div>
-        <div class="icon-comp">
-          <i class="devicon-typescript-plain"></i>
-          <span>Typescript</span>
+      <div class="main-logos">
+        <div class="icon-container-comp">
+          <div class="icon-comp">
+            <i class="devicon-nodejs-plain"></i>
+            <span>Node</span>
+          </div>
+          <div class="icon-comp">
+            <i class="devicon-rust-plain"></i>
+            <span>Rust</span>
+          </div>
+
+          <div class="icon-comp">
+            <i class="devicon-react-plain"></i>
+            <span>React</span>
+          </div>
+          <div class="icon-comp">
+            <i class="devicon-typescript-plain"></i>
+            <span>Typescript</span>
+          </div>
+          <div class="icon-comp">
+            <i class="devicon-haskell-plain"></i>
+            <span>Haskell</span>
+          </div>
         </div>
       </div>
 
-      <div class="tech-exp">
-        We work with industry-leading technologies to build your
-        <strong>new product</strong> or <strong>repair</strong> and
-        <strong>extend</strong> your existing application's features. We've
-        worked with companies small and large such as <strong>Sony</strong>,
-        <strong>Verizon</strong>, <strong>E-xact</strong> and
-        <strong>Metrica</strong> to deliver APIs, frontends, design, and product
-        advice.
+      <div class="card secondary">
+        <h3>
+          <a href="https://subilo.io" target="_blank"
+            ><strong>Subilo</strong></a
+          >
+        </h3>
+
+        <p>
+          <strong>Deployment automation agent</strong>
+        </p>
+
+        <p>
+          Subilo lets you automate deployments for applications running on VPSs
+          and IoT devices. Enjoy continuous deployments and a cool dashboard to
+          see what is going on!
+        </p>
+
+        <div class="icon-container-comp">
+          <div class="icon-comp small">
+            <i class="devicon-rust-plain"></i>
+          </div>
+          <div class="icon-comp small">
+            <i class="devicon-react-plain"></i>
+          </div>
+        </div>
+
+        <div class="authors">
+          <div class="by">by</div>
+          <div class="avatars">
+            <a
+              href="https://twitter.com/jonidelv"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/jonidelv.png?size=60"
+                width="30"
+                alt="Joni" /></a
+            ><a
+              href="https://github.com/matiastucci"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/matiastucci.png?size=60"
+                width="30"
+                alt="Mati" /></a
+            ><a
+              href="https://github.com/ndelvalle"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/ndelvalle.png?size=60"
+                width="30"
+                alt="Nico" /></a
+            ><a
+              href="https://gillchristian.xyz"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/gillchristian.png?size=60"
+                width="30"
+                alt="Christian"
+            /></a>
+          </div>
+        </div>
       </div>
-      <div class="contact-title">Contact</div>
-      <div class="contact-text">
-        We currently have availability for additional projects, and would love
-        to hear from you! We can help or consult about web design and
-        development, UX/UI, startup ideas and kickstarting.
+
+      <div class="card secondary">
+        <h3>
+          <a href="https://tsplay.dev" target="_blank"
+            ><strong>tsplay.dev</strong></a
+          >
+        </h3>
+
+        <p>
+          <strong>Short-links for the TypeScript playground</strong>
+        </p>
+
+        <p>
+          Easily share TypeScript snippets without having to send an URL that is
+          longer than a <i>yarn.lock</i>.
+        </p>
+
+        <div class="icon-container-comp">
+          <div class="icon-comp small">
+            <i class="devicon-react-plain"></i>
+          </div>
+          <div class="icon-comp small">
+            <i class="devicon-typescript-plain"></i>
+          </div>
+
+          <div class="icon-comp small">
+            <i class="devicon-haskell-plain"></i>
+          </div>
+
+          <div class="icon-comp small">
+            <i class="devicon-postgresql-plain"></i>
+          </div>
+        </div>
+
+        <div class="authors">
+          <div class="by">by</div>
+          <div class="avatars">
+            <a
+              href="https://twitter.com/jonidelv"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/jonidelv.png?size=60"
+                width="30"
+                alt="Joni" /></a
+            ><a
+              href="https://gillchristian.xyz"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/gillchristian.png?size=60"
+                width="30"
+                alt="Christian"
+            /></a>
+          </div>
+        </div>
       </div>
-      <div class="button-container">
-        <a
-          class="button primary secondary"
-          target="_blank"
-          href="mailto:hi@bansco.tech"
-          >Start a conversation</a
-        >
+
+      <div class="card secondary">
+        <h3>
+          <a href="https://annotate.tv/" target="_blank"
+            ><strong>Annotate.tv</strong></a
+          >
+        </h3>
+
+        <p>
+          <strong>Optimize your learning on YouTube.</strong>
+        </p>
+
+        <p>
+         Capture the most important takeaways from any video by taking timestamped notes. 
+        </p>
+
+        <div class="icon-container-comp">
+          <div class="icon-comp small">
+            <i class="devicon-react-plain"></i>
+          </div>
+          <div class="icon-comp small">
+            <i class="devicon-nodejs-plain"></i>
+          </div>
+          <div class="icon-comp small">
+            <i class="devicon-mongodb-plain"></i>
+          </div>
+        </div>
+
+        <div class="authors">
+          <div class="by">by</div>
+          <div class="avatars">
+            <a
+              href="https://github.com/matiastucci"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><img
+                src="https://github.com/matiastucci.png?size=60"
+                width="30"
+                alt="Mati" /></a
+            >
+          </div>
+        </div>
       </div>
+
       <div class="copyright">Copyright © 2020 Bansco</div>
     </div>
   </body>
