--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="title-logo">Bansco</div>
     </header>
     <div class="web-content">
-      <div class="title">digital products</div>
+      <div class="title">Digital Products</div>
 
       <div class="main-logos">
         <div class="icon-container-comp">
@@ -47,7 +47,7 @@
       </div>
 
       <div class="card secondary">
-        <h3>
+        <h3 class="tag">
           <a href="https://subilo.io" target="_blank"
             ><strong>Subilo</strong></a
           >
@@ -113,7 +113,7 @@
       </div>
 
       <div class="card secondary">
-        <h3>
+        <h3 class="tag">
           <a href="https://tsplay.dev" target="_blank"
             ><strong>tsplay.dev</strong></a
           >
@@ -170,7 +170,7 @@
       </div>
 
       <div class="card secondary">
-        <h3>
+        <h3 class="tag">
           <a href="https://annotate.tv/" target="_blank"
             ><strong>Annotate.tv</strong></a
           >
